apply plugin: 'eclipse'
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'org.spongepowered.mixin'

archivesBaseName = 'landsoficaria'
group = 'com.axanthic.loi'
version = "${minecraft}-${icaria}"

compileJava.options.encoding = 'UTF-8'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

buildscript {
    repositories {
        maven {
            url 'https://maven.minecraftforge.net'
        }

        maven {
            url 'https://maven.parchmentmc.org'
        }

        maven {
            url 'https://repo.spongepowered.org/repository/maven-public/'
        }
    }

    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.parchmentmc:librarian:1.+'
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7.+'
    }
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    implementation fg.deobf("curse.maven:jei-238222:${jei}")
    implementation fg.deobf("curse.maven:the-one-probe-245211:${top}")
    minecraft "net.minecraftforge:forge:${minecraft}-${forge}"
}

jar {
    manifest {
        attributes([
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "Implementation-Title"    : project.name,
                "Implementation-Vendor"   : "axanthic",
                "Implementation-Version"  : project.version,
                "Specification-Title"     : "landsoficaria",
                "Specification-Vendor"    : "axanthic",
                "Specification-Version"   : "${minecraft}-${icaria}"
        ])
    }
}

jar.finalizedBy('reobfJar')

minecraft {
    mappings channel: 'parchment', version: "${parchment}-${minecraft}"
    runs {
        client {
            mods {
                landsoficaria {
                    source sourceSets.main
                }
            }
            property 'forge.logging.console.level', 'debug'
            property 'forge.logging.markers', 'REGISTRIES'
            workingDirectory project.file('run')
        }

        data {
            mods {
                landsoficaria {
                    source sourceSets.main
                }
            }
            args '--mod', 'landsoficaria', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            property 'forge.logging.console.level', 'debug'
            property 'forge.logging.markers', 'REGISTRIES'
            workingDirectory project.file('run')
        }

        server {
            mods {
                landsoficaria {
                    source sourceSets.main
                }
            property 'forge.logging.console.level', 'debug'
            property 'forge.logging.markers', 'REGISTRIES'
            workingDirectory project.file('run')
            }
        }
    }
}

mixin {
    add sourceSets.main, "landsoficaria.refmap.json"
    config "landsoficaria.mixins.json"
}

repositories {
    maven {
        name 'cursemaven'
        url "https://www.cursemaven.com"
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}
